# mka_embedded

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmessage  BandPlan.xml  CMakeLists.txt  CMakePresets.json  PROJECT_NOTES.md  README.md  SDRSharp.config  sdr.bat  sdr_aprs.bat  sdr_check.bat  sdr_menu.bat  sdr_noaa.bat  sdr_scan.bat  todo.md
.github/workflows/: ci.yml
.qwen/: settings.json
cheatsheets/: freertos_quickref.md  stm32_quickref.md
docs/: Doxyfile.in  README.md  doxygen_cheatsheet.md  doxygen_guide.md
examples/01_blinky/: main.cpp
examples/02_uart_echo/: main.cpp
examples/03_i2c_scan/: main.cpp
examples/04_imu_reader/: main.cpp
examples/05_gps_logger/: main.cpp
examples/06_freeRTOS_tasks/: main.cpp
examples/07_fdir_demo/: main.cpp
examples/08_sd_card_logger/: main.cpp
examples/09_low_power_mode/: main.cpp
examples/10_can_comm/: main.cpp
exercises/: labs.md
scripts/: FFT_OPTIMIZATION.md  SDR_QUICKSTART.md  SDR_README.md  SDR_TODO.md  install_ninja.ps1  install_ninja.sh  install_rtlsdr_driver.ps1  install_zadig.bat  launch.py  port_checker.py  sdr_antenna.py  sdr_ax25.py  sdr_capture.py  sdr_capture_enhanced.py  sdr_direwolf.conf  sdr_fft_benchmark.py  sdr_noaa.py  sdr_scanner.py  setup.ps1  setup.sh  test_rtlsdr.py
src/cpp/algorithms/: adcs_algorithms.hpp  anomaly_detector.cpp  anomaly_detector.hpp  sgp4.cpp  sgp4.hpp
src/cpp/drivers/: eeprom_driver.hpp  new_sensors_drivers.hpp  radio_driver.hpp  sensors_drivers.hpp  sun_sensor.hpp
src/cpp/hal/: hal_full.hpp
src/cpp/rtos/: freertos_wrapper.hpp
src/cpp/systems/: actualization_integration.hpp  auto_actualization.hpp  block_device.hpp  canopen.hpp  command_handler.hpp  fdir.hpp  file_system.hpp  file_system_littlefs.hpp  health_monitor.hpp  log_system.hpp  memory_pool.hpp  moscow_time.hpp  ota_updater.cpp  ota_updater.hpp  param_store.hpp  power_manager.hpp  state_machine.hpp  task_scheduler.hpp  telemetry.hpp  watchdog_manager.hpp
src/cpp/utils/: callback.hpp  result.hpp  span.hpp
src/python/: requirements.txt
src/python/hil/: hil_framework.py
src/python/tests/: test_all.py
src/python/utils/: ax25_protocol.py  ccsds_protocol.py  csp_protocol.py  littlefs_sim.py  orbit_simulator.py  ota_update.py  telemetry_generator.py
src/python/visualization/: telemetry_visualizer.py
tests/: hal_mocks.hpp  test_actualization_integration.cpp  test_adcs_negative.cpp  test_algorithms.cpp  test_anomaly_detector.cpp  test_auto_actualization.cpp  test_callback.cpp  test_canopen.cpp  test_commands.cpp  test_driver_integration.cpp  test_eeprom.cpp  test_fdir.cpp  test_fdir_integration.cpp  test_file_system.cpp  test_freertos_wrapper.cpp  test_health_monitor.cpp  test_littlefs.cpp  test_log_system.cpp  test_memory_pool.cpp  test_memory_pool_stress.cpp  test_moscow_time.cpp  test_new_sensors.cpp  test_ota.cpp  test_param_store.cpp  test_power_manager.cpp  test_quest.cpp  test_radio.cpp  test_result.cpp  test_sensors.cpp  test_sgp4.cpp  test_sgp4_negative.cpp  test_sliding_mode.cpp  test_span.cpp  test_statemachine.cpp  test_sun_sensor.cpp  test_task_scheduler.cpp  test_telemetry.cpp  test_triad.cpp  test_ukf.cpp  test_utils.cpp  (+2 more)
